# reinforcement_mahjong

./: .gitignore  CMakeLists.txt  README.md  collect_parallel_mp.py  debug_cpp_engine.py  ppo_riichi.pt  pyproject.toml  requirements.txt  riichi_engine.py  rl_policy.py  test_mp_collect.py
configs/: train.toml
cpp/include/mahjong/: engine.hpp  hand_analysis.hpp  rule_config.hpp  scoring.hpp  tile_utils.hpp  types.hpp  yaku.hpp
cpp/src/: bindings.cpp  engine.cpp  hand_analysis.cpp  scoring.cpp  tile_utils.cpp  yaku.cpp
docs/: MULTIPROCESS.md
mahjong/: __init__.py  engine.py  replay.py  rules.py  scoring.py
mahjong/rl/: __init__.py  adapter.py  mp_collect.py  parallel_collect.py  trainer.py  trainer_mp.py
tests/: test_engine.py  test_rl_adapter.py  test_scoring.py  test_train_config.py  test_train_smoke.py
